Changed lib name to avoid conflict with existing one

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=TM1650
+name=Mozz_TM1650
 version=0.2
 author=Mario Mikočević mozgy
 maintainer=Mario Mikočević <mario.mikocevic@sk.t-com.hr>
 sentence=TM1650 driver
 paragraph=TM1650 driver
 category=Display
-url=https://github.com/mozgy/TM1650
+url=https://github.com/mozgy/Mozz_TM1650
 architectures=*
