--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Mozz_TM1650
-version=0.2
+version=1.0
 author=Mario Mikočević mozgy
 maintainer=Mario Mikočević <mario.mikocevic@sk.t-com.hr>
 sentence=TM1650 driver
-paragraph=TM1650 driver
+paragraph=Library for 7 segment LCD displays with TM1650, both dot and comon style supported
 category=Display
 url=https://github.com/mozgy/Mozz_TM1650
 architectures=*
